add continuation manager
Signed-off-by: zhangmingxiang <zhangmingxiang@huawei.com>
Change-Id: Ia6507db460c877c4a69ff9bbd8c0d77b39156480
Signed-off-by: zhangmingxiang <zhangmingxiang@huawei.com>

--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -17,6 +17,7 @@ group("ams_services_target") {
     "abilitymgr:abilityms_target",
     "appmgr:appms_target",
     "common:ams_common_target",
+    "continuationmgr:continuationmgr_target",
     "dataobsmgr:dataobsms",
     "uripermmgr:libupms",
   ]
