--- a/frameworks/js/napi/BUILD.gn
+++ b/frameworks/js/napi/BUILD.gn
@@ -33,6 +33,7 @@ group("napi_packages") {
     "${aafwk_napi_path}/callee:callee_napi",
     "${aafwk_napi_path}/caller:caller_napi",
     "${aafwk_napi_path}/configuration_constant:configurationconstant_napi",
+    "${aafwk_napi_path}/continuation_manager:continuationmanager_napi",
     "${aafwk_napi_path}/dataUriUtils:datauriutils_napi",
     "${aafwk_napi_path}/extensioncontext:extensioncontext_napi",
     "${aafwk_napi_path}/featureAbility:featureability",
