--- a/interfaces/inner_api/BUILD.gn
+++ b/interfaces/inner_api/BUILD.gn
@@ -16,6 +16,7 @@ group("innerkits_target") {
   deps = [
     "ability_manager:ability_manager",
     "app_manager:app_manager",
+    "continuation_manager:continuation_manager",
     "dataobs_manager:dataobs_manager",
     "uri_permission:uri_permission_mgr",
   ]
