--- a/aafwk.gni
+++ b/aafwk.gni
@@ -44,6 +44,7 @@ declare_args() {
   distributed_data_object_enable = true
   ability_runtime_graphics = true
   ability_runtime_power = true
+  suspend_manager = true
 
   if (!defined(global_parts_info) ||
       defined(global_parts_info.account_os_account)) {
@@ -59,5 +60,10 @@ declare_args() {
   if (defined(global_parts_info) &&
       !defined(global_parts_info.distributeddatamgr_distributeddataobject)) {
     distributed_data_object_enable = false
+  }
+
+  if (defined(global_parts_info) &&
+      !defined(global_parts_info.suspend_manager)) {
+    suspend_manager = false
   }
 }
