--- a/services/abilitymgr/BUILD.gn
+++ b/services/abilitymgr/BUILD.gn
@@ -131,6 +131,11 @@ ohos_shared_library("abilityms") {
     external_deps += [ "background_task_mgr:bgtaskmgr_innerkits" ]
   }
 
+  if (suspend_manager) {
+    external_deps += [ "suspend_maanager:suspend_manager_client" ]
+    defines += [ "SUSPEND_MANAGER_ENABLE" ]
+  }
+
   if (ability_runtime_graphics) {
     deps += [
       "//foundation/arkui/ace_engine/interfaces/inner_api/ui_service_manager:ui_service_mgr",
