sandbox change library path
Signed-off-by: Mupceet <laiguizhong@huawei.com>

--- a/services/abilitymgr/BUILD.gn
+++ b/services/abilitymgr/BUILD.gn
@@ -148,7 +148,8 @@ ohos_shared_library("abilityms") {
       "window_manager:libwm",
     ]
   }
-
+  install_images = [ system_base_dir ]
+  relative_install_dir = "platformsdk"
   subsystem_name = "ability"
   part_name = "ability_runtime"
 }
