appdatamgr仓部件及目录整改
Signed-off-by: PaDaBoo <xuejianwu@huawei.com>

--- a/frameworks/js/napi/aafwk/inner/napi_common/BUILD.gn
+++ b/frameworks/js/napi/aafwk/inner/napi_common/BUILD.gn
@@ -52,6 +52,7 @@ ohos_shared_library("napi_common") {
     "ipc:ipc_core",
     "ipc_js:rpc",
     "napi:ace_napi",
+    "relational_store:native_dataability",
     "utils_base:utils",
   ]
 
