--- a/interfaces/inner_api/ability_manager/BUILD.gn
+++ b/interfaces/inner_api/ability_manager/BUILD.gn
@@ -104,6 +104,7 @@ ohos_shared_library("ability_manager") {
     "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
     "samgr_standard:samgr_proxy",
     "utils_base:utils",
