--- a/frameworks/js/napi/aafwk/featureAbility/BUILD.gn
+++ b/frameworks/js/napi/aafwk/featureAbility/BUILD.gn
@@ -55,6 +55,7 @@ ohos_shared_library("featureability") {
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "napi:ace_napi",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
     "relational_store:rdb_data_share_adapter",
     "utils_base:utils",
