--- a/frameworks/kits/ability/native/BUILD.gn
+++ b/frameworks/kits/ability/native/BUILD.gn
@@ -223,6 +223,7 @@ ohos_shared_library("abilitykit_native") {
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "ipc_js:rpc",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
     "relational_store:rdb_data_share_adapter",
     "samgr_standard:samgr_proxy",
