--- a/services/test/moduletest/ability_record_test/BUILD.gn
+++ b/services/test/moduletest/ability_record_test/BUILD.gn
@@ -116,10 +116,10 @@ ohos_moduletest("AbilityRecordModuleTest") {
     "hisysevent_native:libhisysevent",
     "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
+    "init:libbegetutil",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
     "relational_store:native_rdb",
-    "startup_l2:syspara",
   ]
 
   if (background_task_mgr_continuous_task_enable) {
