--- a/services/abilitymgr/BUILD.gn
+++ b/services/abilitymgr/BUILD.gn
@@ -73,6 +73,10 @@ config("abilityms_config") {
     defines += [ "BGTASKMGR_CONTINUOUS_TASK_ENABLE" ]
   }
 
+  if (suspend_manager) {
+    defines += [ "SUSPEND_MANAGER_ENABLE" ]
+  }
+
   cflags = []
   if (target_cpu == "arm") {
     cflags += [ "-DBINDER_IPC_32BIT" ]
@@ -133,7 +137,6 @@ ohos_shared_library("abilityms") {
 
   if (suspend_manager) {
     external_deps += [ "suspend_maanager:suspend_manager_client" ]
-    defines += [ "SUSPEND_MANAGER_ENABLE" ]
   }
 
   if (ability_runtime_graphics) {
