--- a/services/abilitymgr/BUILD.gn
+++ b/services/abilitymgr/BUILD.gn
@@ -136,7 +136,7 @@ ohos_shared_library("abilityms") {
   }
 
   if (suspend_manager) {
-    external_deps += [ "suspend_maanager:suspend_manager_client" ]
+    external_deps += [ "suspend_manager:suspend_manager_client" ]
   }
 
   if (ability_runtime_graphics) {
