--- a/services/common/BUILD.gn
+++ b/services/common/BUILD.gn
@@ -59,3 +59,21 @@ ohos_shared_library("event_report") {
   subsystem_name = "ability"
   part_name = "ability_runtime"
 }
+
+ohos_shared_library("bundle_utils") {
+  public_configs = [ ":common_config" ]
+
+  sources = [ "src/bundle_manager_utils.cpp" ]
+
+  external_deps = [
+    "ability_base:want",
+    "bundle_framework:appexecfwk_base",
+    "bundle_framework:appexecfwk_core",
+    "hiviewdfx_hilog_native:libhilog",
+    "ipc:ipc_core",
+    "utils_base:utils",
+  ]
+
+  subsystem_name = "ability"
+  part_name = "ability_runtime"
+}
