--- a/services/appmgr/BUILD.gn
+++ b/services/appmgr/BUILD.gn
@@ -85,6 +85,7 @@ ohos_shared_library("libappms") {
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
     "samgr_standard:samgr_proxy",
+    "startup_l2:syspara",
     "utils_base:utils",
   ]
 
