Description:fixed object lifecycle Sig:SIG_ApplicationFramework Feature or Bugfix:Bugfix Binary Source:No
Signed-off-by: altay <yuaqiang1@huawei.com>
Change-Id: I577b4654b2dad0c2bd0cabcd41b5bed3de7292cb

--- a/frameworks/js/napi/featureAbility/BUILD.gn
+++ b/frameworks/js/napi/featureAbility/BUILD.gn
@@ -38,6 +38,7 @@ ohos_shared_library("featureability") {
     "${ability_runtime_napi_path}/inner/napi_common:napi_common",
     "${ability_runtime_native_path}/appkit:appkit_native",
     "//third_party/libuv:uv_static",
+    "//foundation/arkui/napi:ace_napi_ark",
   ]
 
   external_deps = [
