dataability is compatile with datashare
Signed-off-by: zhoujun62 <zhoujun62@huawei.com>
Change-Id: I1ef795294b17d5c96cd8555d7773009ec0090748

--- a/frameworks/native/ability/native/BUILD.gn
+++ b/frameworks/native/ability/native/BUILD.gn
@@ -308,6 +308,7 @@ ohos_shared_library("data_ability_helper") {
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
     "data_share:datashare_abilitykit",
+    "data_share:datashare_common",
     "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
