--- a/test/unittest/lifecycle_test/BUILD.gn
+++ b/test/unittest/lifecycle_test/BUILD.gn
@@ -23,10 +23,12 @@ ohos_unittest("lifecycle_test") {
     "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/system_ability_mock",
     "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/system_ability_mock",
     "${distributedschedule_path}/samgr/interfaces/innerkits/samgr_proxy/include",
+    "${ability_runtime_test_path}/common",
   ]
 
   sources = [
     "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/appexecfwk_core/src/appmgr/mock_app_scheduler.cpp",
+    "${ability_runtime_test_path}/common/common_test_helper.cpp",
     "lifecycle_test.cpp",  # add mock file
   ]
 
