--- a/test/unittest/ability_manager_service_account_test/BUILD.gn
+++ b/test/unittest/ability_manager_service_account_test/BUILD.gn
@@ -20,6 +20,7 @@ ohos_unittest("ability_manager_service_account_test") {
   module_out_path = module_output_path
   cflags_cc = []
   include_dirs = [
+    "${ability_runtime_test_path}/common",
     "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/system_ability_mock",
     "${distributedschedule_path}/samgr/interfaces/innerkits/samgr_proxy/include",
     "${distributedschedule_path}/samgr/adapter/interfaces/innerkits/include/",
@@ -28,6 +29,7 @@ ohos_unittest("ability_manager_service_account_test") {
   ]
 
   sources = [
+    "${ability_runtime_test_path}/common/common_test_helper.cpp",
     # add mock file
     "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/appexecfwk_core/src/appmgr/mock_app_scheduler.cpp",
     "ability_manager_service_account_test.cpp",
