--- a/frameworks/js/napi/app/ability_stage/BUILD.gn
+++ b/frameworks/js/napi/app/ability_stage/BUILD.gn
@@ -12,9 +12,10 @@
 # limitations under the License.
 
 import("//ark/ts2abc/ts2panda/ts2abc_config.gni")
+import("//ark/ts2abc/es2panda/es2abc_config.gni")
 import("//build/ohos.gni")
 
-ts2abc_gen_abc("gen_ability_stage_abc") {
+es2abc_gen_abc("gen_ability_stage_abc") {
   src_js = rebase_path("ability_stage.js")
   dst_file = rebase_path(target_out_dir + "/ability_stage.abc")
   in_puts = [ "ability_stage.js" ]
