--- a/frameworks/js/napi/app/test_runner/BUILD.gn
+++ b/frameworks/js/napi/app/test_runner/BUILD.gn
@@ -12,9 +12,10 @@
 # limitations under the License.
 
 import("//ark/ts2abc/ts2panda/ts2abc_config.gni")
+import("//ark/ts2abc/es2panda/es2abc_config.gni")
 import("//build/ohos.gni")
 
-ts2abc_gen_abc("gen_test_runner_abc") {
+es2abc_gen_abc("gen_test_runner_abc") {
   src_js = rebase_path("test_runner.js")
   dst_file = rebase_path(target_out_dir + "/test_runner.abc")
   in_puts = [ "test_runner.js" ]
