--- a/frameworks/js/napi/callee/BUILD.gn
+++ b/frameworks/js/napi/callee/BUILD.gn
@@ -12,9 +12,10 @@
 # limitations under the License.
 
 import("//ark/ts2abc/ts2panda/ts2abc_config.gni")
+import("//ark/ts2abc/es2panda/es2abc_config.gni")
 import("//build/ohos.gni")
 
-ts2abc_gen_abc("gen_callee_abc") {
+es2abc_gen_abc("gen_callee_abc") {
   src_js = rebase_path("callee.js")
   dst_file = rebase_path(target_out_dir + "/callee.abc")
   in_puts = [ "callee.js" ]
