--- a/frameworks/js/napi/dataUriUtils/BUILD.gn
+++ b/frameworks/js/napi/dataUriUtils/BUILD.gn
@@ -12,9 +12,10 @@
 # limitations under the License.
 
 import("//ark/ts2abc/ts2panda/ts2abc_config.gni")
+import("//ark/ts2abc/es2panda/es2abc_config.gni")
 import("//build/ohos.gni")
 
-ts2abc_gen_abc("gen_data_uri_utils_abc") {
+es2abc_gen_abc("gen_data_uri_utils_abc") {
   src_js = rebase_path("data_uri_utils.js")
   dst_file = rebase_path(target_out_dir + "/data_uri_utils.abc")
   in_puts = [ "data_uri_utils.js" ]
