--- a/frameworks/native/appkit/BUILD.gn
+++ b/frameworks/native/appkit/BUILD.gn
@@ -12,10 +12,11 @@
 # limitations under the License.
 
 import("//ark/ts2abc/ts2panda/ts2abc_config.gni")
+import("//ark/ts2abc/es2panda/es2abc_config.gni")
 import("//build/ohos.gni")
 import("//foundation/ability/ability_runtime/ability_runtime.gni")
 
-ts2abc_gen_abc("gen_delegator_mgmt_abc") {
+es2abc_gen_abc("gen_delegator_mgmt_abc") {
   src_js = rebase_path(
           "${ability_runtime_native_path}/appkit/ability_delegator/runner_runtime/delegator_mgmt.js")
   dst_file = rebase_path(target_out_dir + "/delegator_mgmt.abc")
